--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,3 +1,5 @@
+/* Text Import from Google Fonts */
+
 @import url('https://fonts.googleapis.com/css2?family=Itim&family=Montserrat&display=swap');
 
 /* Default styling */
@@ -67,6 +69,9 @@ a {
     list-style: none;
 }
 
+/*Code below from an answer given to a question on the following site
+https://stackoverflow.com/questions/31140935/how-do-i-add-vertical-line-on-my-menu-item-in-html-css */
+
 #menu li:not(:first-child):before {
     content: "|      ";
 }
@@ -77,6 +82,9 @@ a {
 }
 
 /* Dropdown menu */
+
+/*Dropdown from W3 school tutorial for dropdown menu - adjusted for this site
+                https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->*/
 
 li a,
 .dropbtn {
@@ -127,6 +135,9 @@ li.dropdown {
 }
 
 /* Make Header sticky */
+
+/* Javascript from W3 school tutorial for sticky nav bar and adjusted for this site
+    https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky */
 
 .sticky {
     position: fixed;
@@ -460,6 +471,9 @@ footer li {
 }
 
 /* Tooltip for Anxiety activities */
+
+/* Code from W3 schools tutorial on Tooltips
+https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
 .tooltip {
     position: relative;
@@ -1011,28 +1025,28 @@ footer li {
         font-size: 65%;
     }
 
-        /* Classes used across pages */
+    /* Classes used across pages */
 
-        .sections-headers {
-            padding: 20px;
-            font-size: 100%;
-        }
-    
-        .solid-background {
-            width: 400px;
-        }
-    
-        .solid-orange {
-            width: 400px;
-            line-height: 120%;
-            font-size: 65%;
-            padding: 3px;
-        }
-    
-        .square-image {
-            width: 120px;
-            height: 120px;
-        }
+    .sections-headers {
+        padding: 20px;
+        font-size: 100%;
+    }
+
+    .solid-background {
+        width: 400px;
+    }
+
+    .solid-orange {
+        width: 400px;
+        line-height: 120%;
+        font-size: 65%;
+        padding: 3px;
+    }
+
+    .square-image {
+        width: 120px;
+        height: 120px;
+    }
 
     /* What is sensory play? */
 
