--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -148,12 +148,12 @@ li.dropdown {
 
 .content {
     padding: 16px;
-  }
-  
-  
-  .sticky + .content {
+}
+
+
+.sticky+.content {
     padding-top: 60px;
-  }
+}
 
 /* Footer */
 
@@ -205,9 +205,12 @@ footer li {
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: top;
     position: relative;
     z-index: -2;
     will-change: transform;
+    border-top: 5px white solid;
+
 }
 
 #hero-text {
@@ -526,8 +529,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
 /* Hear from Each Other */
 
-#feedback-heading
-{
+#feedback-heading {
     font-size: 150%;
     text-align: center;
     padding: 40px 10px 10px 10px;
@@ -538,7 +540,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     height: 80px;
     border-radius: 50%;
     padding: 2px;
-    border:#333333 solid 1px;
+    border: #333333 solid 1px;
     margin: 1px;
     float: left;
 }
@@ -567,12 +569,102 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     margin: 3px;
 }
 
-/* Contact Us */
+/* Get In Touch */
 
 #contact-us-heading {
     font-size: 150%;
     text-align: center;
     padding: 40px 10px 10px 10px;
+}
+
+#contact-us-area {
+    text-align: left;
+    background: url('../images/contact_us.jpg');
+    height: 900px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    will-change: transform;
+    border-top: 30px white solid;
+}
+
+/* Form */
+
+#form-background {
+    height: fit-content;
+    width: 600px;
+    background-color: rgba(255, 253, 253, 0.8);
+    bottom: 5%;
+    right: 8%;
+    padding: 20px;
+    position: absolute;
+    will-change: transform;
+    font-size: 40%;
+    font-weight: 800;
+}
+
+.form-input {
+    background: transparent;
+    width: 100%;
+    height: 20px;
+    margin: 20px 0 20px 0;
+    border: 1px solid #333333;
+    border-radius: 5px;
+    will-change: transform;
+}
+
+.form-input:hover {
+    border-color: #44b3a5;
+}
+
+.text-area-pane {
+    width: 100%;
+    height: 50px;
+    margin: 20px 0 20px 0;
+    border: 1px solid #333333;
+    border-radius: 5px;
+    background: transparent;
+    will-change: transform;
+    font-size: 100%;
+    font-family: Montserrat, sans-serif;
+}
+
+.form-labels {
+    width: fit-content;
+    height: fit-content;
+    border: 1px solid #333333;
+    border-radius: 5px;
+    margin-right: 10px;
+    background-color: #44b3a5;
+    will-change: transform;
+    padding: 3px;
+}
+
+.radio-feedback {
+
+    margin: 20px 2px 20px 2px;
+}
+
+
+.submit-info {
+    margin-top: 20px;
+    padding: 15px 32px 15px 32px;
+    text-align: center;
+    font-size: 120%;
+    font-family: Itim, sans-serif;
+    background-color: #44b3a5;
+    color: #333333;
+    border: 1px solid #333333;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+/* Shadow code from W3 schools */
+
+.submit-info:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 /* @Media queries */
