--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -644,13 +644,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
 /* Only stick if nav can fit */
 
-@media (min-height: 300px) {
-    nav ul {
-      position: sticky;
-      top: 0;
-    }
-  }
-
 @media screen and (max-width: 1090px) {
 
     /* Home Page */
@@ -792,11 +785,11 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     /* Homepage */
 
     #hero-area {
-        height: 400px;
+        height: fit-content;
     }
 
     #hero-text {
-        height: 250px;
+        height: fit-content;
         bottom: 0px;
         top: 50%;
         left: 50%;
@@ -820,7 +813,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     }
 
     .solid-background {
-        width: 700px;
+        width:fit-content;
         padding: 5px;
     }
 
@@ -836,35 +829,35 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     /* What is sensory play? */
 
     .right-align {
-        width: 380px;
+        width: fit-content;
         line-height: 130%;
     }
 
     .left-align {
-        width: 380px;
+        width: fit-content;
         line-height: 130%;
     }
 
     .senses-info-left {
-        width: 700px;
+        width: fit-content;
     }
 
     .senses-info-right {
-        width: 700px;
+        width: fit-content;
     }
 
     /* Play in Motion */
 
     #iframe {
-        width: 650px;
-        height: 406px;
+        width: fit-content;
+        height: auto;
     }
 
     /* Top 10 Activities */
 
     #top10-pane {
-        width: 700px;
-        height: 1180px;
+        width: fit-content;
+        height: fit-content;
     }
 
     #water-img {
@@ -876,13 +869,13 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     }
 
     .activities-style {
-        width: 400px;
+        width: fit-content;
     }
 
     /* Help with Anxiety */
 
     #anxiety-pane {
-        width: 700px;
+        width: fit-content;
     }
 
     .anxiety-activity {
@@ -907,12 +900,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         font-size: 150%;
     }
 
-    .solid-background {
-        width: 600px;
-    }
-
     .solid-orange {
-        width: 600px;
         line-height: 130%;
         font-size: 90%;
     }
@@ -925,42 +913,17 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     /* What is sensory play? */
 
     .right-align {
-        width: 280px;
-        line-height: 100%;
         font-size: 90%;
     }
 
     .left-align {
-        width: 280px;
-        line-height: 100%;
         font-size: 90%;
-    }
-
-    .senses-info-left {
-        width: 600px;
-    }
-
-    .senses-info-right {
-        width: 600px;
-    }
-
-    /* Play in Motion */
-
-    #iframe {
-        width: 550px;
-        height: 306px;
     }
 
     /* Top 10 Activities */
 
     #top10-pane {
-        width: 600px;
-        height: 1140px;
         font-size: 90%;
-    }
-
-    .activities-style {
-        width: 350px;
     }
 
     /* Help with Anxiety */
@@ -968,10 +931,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     #anxiety-img {
         width: 400px;
         height: 300px;
-    }
-
-    #anxiety-pane {
-        width: 600px;
     }
 
     .anxiety-activity {
@@ -984,15 +943,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
     .tooltip .tooltiptext {
         font-size: 80%;
-    }
-}
-
-@media screen and (max-width: 740px) {
-
-    /* Homepage */
-
-    #hero-area {
-        height: 300px;
     }
 }
 
@@ -1011,12 +961,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         font-size: 130%;
     }
 
-    .solid-background {
-        width: 500px;
-    }
-
     .solid-orange {
-        width: 500px;
         line-height: 130%;
         font-size: 75%;
     }
@@ -1026,52 +971,31 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         height: 150px;
     }
 
-    /* what is sensory play? */
+    /* What is sensory play? */
 
     .right-align {
-        width: 250px;
         font-size: 75%;
     }
 
     .left-align {
-        width: 250px;
         font-size: 75%;
     }
 
     .senses-info-left {
-        width: 500px;
         font-size: 90%;
     }
 
     .senses-info-right {
-        width: 500px;
         font-size: 90%;
-    }
-
-    /* Play in Motion */
-
-    #iframe {
-        width: 450px;
-        height: 206px;
     }
 
     /* Top 10 Activities */
 
     #top10-pane {
-        width: 500px;
-        height: 1065px;
         font-size: 75%;
     }
 
-    .activities-style {
-        width: 280px;
-    }
-
     /* Help with Anxiety */
-
-    #anxiety-pane {
-        width: 500px;
-    }
 
     #anxiety-pane figcaption {
         font-size: 75%;
@@ -1085,7 +1009,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     /* Tooltip */
 
     .tooltip .tooltiptext {
-        width: 180px;
+        width: fit-content;
         font-size: 85%;
     }
 }
@@ -1107,7 +1031,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     /* Home Page */
 
     #hero-area {
-        height: 200px;
+        height: fit-content;
     }
 
     #hero-text {
@@ -1136,11 +1060,10 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     }
 
     .solid-background {
-        width: 400px;
+        width: fit-content;
     }
 
     .solid-orange {
-        width: 400px;
         line-height: 120%;
         font-size: 65%;
         padding: 3px;
@@ -1154,41 +1077,30 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     /* What is sensory play? */
 
     .right-align {
-        width: 185px;
         font-size: 65%;
         padding: 3px;
     }
 
     .left-align {
-        width: 185px;
         font-size: 65%;
         padding: 3px;
     }
 
     .senses-info-left {
-        width: 400px;
         font-size: 80%;
         padding: 15px;
     }
 
     .senses-info-right {
-        width: 400px;
         font-size: 80%;
         padding: 15px;
     }
 
     /* Play in Motion */
 
-    #iframe {
-        width: 350px;
-        height: 206px;
-    }
-
     /* Top 10 Activities */
 
     #top10-pane {
-        width: 400px;
-        height: 965px;
         font-size: 65%;
     }
 
@@ -1207,10 +1119,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         height: 200px;
     }
 
-    #anxiety-pane {
-        width: 400px;
-    }
-
     #anxiety-pane figcaption {
         font-size: 70%;
     }
@@ -1227,13 +1135,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
     /* Classes used across page*/
 
-    .solid-background {
-        width: 300px;
-    }
-
     .solid-orange {
-        width: 300px;
-        line-height: 100%;
         font-size: 55%;
     }
 
@@ -1245,37 +1147,18 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     /* What is sensory play? */
 
     .right-align {
-        width: 150px;
         font-size: 55%;
         padding: 3px;
     }
 
     .left-align {
-        width: 150px;
         font-size: 55%;
         padding: 3px;
-    }
-
-    .senses-info-left {
-        width: 300px;
-    }
-
-    .senses-info-right {
-        width: 300px;
-    }
-
-    /* Play in Motion */
-
-    #iframe {
-        width: 250px;
-        height: 150px;
     }
 
     /* Top 10 Activities */
 
     #top10-pane {
-        width: 300px;
-        height: 1055px;
         font-size: 55%;
     }
 
@@ -1294,10 +1177,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         height: 100px;
     }
 
-    #anxiety-pane {
-        width: 300px;
-    }
-
     #anxiety-pane figcaption {
         font-size: 55%;
     }
@@ -1305,12 +1184,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     .anxiety-activity {
         width: 60px;
         height: 60px;
-    }
-
-    /* Tooltip */
-
-    .tooltip .tooltiptext {
-        width: 120px;
     }
 }
 
@@ -1331,14 +1204,11 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     /* Home Page */
 
     #hero-area {
-        background: none;
-        background-color: #E8A87C;
-        max-height: 800px;
+        background: url ('../images/home_page_small');
+        max-height: fit-content;
     }
 
     #hero-text {
-        height: fit-content;
-        width: fit-content;
         font-size: 60%;
         padding: 0px;
     }
@@ -1379,13 +1249,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         font-size: 70%;
     }
 
-    .solid-background {
-        width: 200px;
-    }
-
     .solid-orange {
-        width: 200px;
-        line-height: 100%;
         font-size: 35%;
     }
 
@@ -1395,42 +1259,29 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         padding: 1px;
     }
 
-    /* what is sensory play? */
+    /* What is sensory play? */
 
     .right-align {
-        width: 100px;
         font-size: 35%;
         padding: 1px;
     }
 
     .left-align {
-        width: 100px;
         font-size: 35%;
         padding: 1px;
     }
 
     .senses-info-left {
-        width: 200px;
         font-size: 75%;
     }
 
     .senses-info-right {
-        width: 200px;
         font-size: 75%;
-    }
-
-    /* Play in Motion */
-
-    #iframe {
-        width: 150px;
-        height: 100px;
     }
 
     /* Top 10 Activities */
 
     #top10-pane {
-        width: 200px;
-        height: 780px;
         font-size: 35%;
     }
 
@@ -1449,9 +1300,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         height: 90px;
     }
 
-    #anxiety-pane {
-        width: 200px;
-    }
 
     #anxiety-pane figcaption {
         font-size: 45%;
@@ -1479,14 +1327,8 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
     /* Home Page */
 
-    #hero-area {
-        background: none;
-        background-color: #E8A87C;
-    }
 
     #hero-text {
-        height: fit-content;
-        width: fit-content;
         font-size: 50%;
         padding: 0px;
     }
@@ -1531,12 +1373,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
             font-size: 60%;
         }
 
-        .solid-background {
-            width: 180px;
-        }
-
         .solid-orange {
-            width: 180px;
             font-size: 25%;
         }
 
@@ -1549,39 +1386,26 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         /* What is sensory play? */
 
         .right-align {
-            width: 80px;
             font-size: 25%;
             padding: 1px;
         }
 
         .left-align {
-            width: 80px;
             font-size: 25%;
             padding: 1px;
         }
 
         .senses-info-left {
-            width: 180px;
             font-size: 60%;
         }
 
         .senses-info-right {
-            width: 180px;
             font-size: 60%;
-        }
-
-        /* Play in Motion */
-
-        #iframe {
-            width: 150px;
-            height: 100px;
         }
 
         /* Top 10 Activities */
 
         #top10-pane {
-            width: 180px;
-            height: 900px;
             font-size: 25%;
         }
 
@@ -1600,9 +1424,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
             height: 90px;
         }
 
-        #anxiety-pane {
-            width: 180px;
-        }
 
         #anxiety-pane figcaption {
             font-size: 30%;
@@ -1630,10 +1451,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
         /* Home Page */
 
-        #hero-area {
-            background: none;
-            background-color: #E8A87C;
-        }
 
         #hero-text {
             font-size: 40%;
